src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
@import './assets/css/font-montserrat.css';
@import "./assets/css/font-roboto.css";
@import "./assets/css/font-karla.css";
@import './assets/css/font-great-vibes.css'; // @import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
// @import '../node_modules/@fortawesome/fontawesome-free/css/solid.css';
// @import '../node_modules/@fortawesome/fontawesome-free/css/brands.css';
@import '../node_modules/@fortawesome/fontawesome-free/css/all.css'; // ng build --base-href https://wess58.github.io/mercyportfolio/ --output-path docs && git add . && git commit -m "docs ready for deployment" && git push
// color blue - #4673b6
// color yellow - #f5be1d
// ng build --base-href https://wess58.github.io/mercyportfolio/ --output-path docs && git add . && git commit -m "docs ready for deployment" && git push

html {
  scroll-behavior: smooth;
}

body {
  // font-family: 'Montserrat', sans-serif;
  font-family: "Karla", sans-serif;
  font-optical-sizing: auto;
  letter-spacing: 1px;
  -webkit-font-smoothing: antialiased;
  scroll-behavior: smooth !important;
  overflow-x: hidden !important;
  // background-color: #f8f9fa;
}

* img::selection {
  background-color: transparent!important;
}

* img {
  user-drag: none !important;
  user-select: none !important;
  -moz-user-select: none !important;
  -webkit-user-drag: none !important;
  -webkit-user-select: none !important;
  -ms-user-select: none !important;
}

*a,
button {
  outline: none!important;
  box-shadow: none!important;
}

* strong {
  font-weight: 600;
}

::selection {
  // color: #f1f1f1;
  // background-color: #80868b!important;
}

.container-fluid {
  padding-left: 0;
  padding-right: 0;
}

.section-description {
  font-weight: 400;
  color: #5f6063;
  margin-bottom: 30px;
  text-align: center;
}

.btn-back {
  background-color: transparent;
  color: #3c4043;
  padding: 5px 10px;
  border-radius: 12px;
  border: 1px solid #e1e1e1;
  font-size: 1.1rem;
  margin-bottom: 20px;
  transition: all 0.3s;

  &:hover {
    border: 1px solid #3c4043;
    background-color: #3c4043;
    color: #fff;
  }
}
// *****************************
// PODCASTS SECTION
// *****************************

.articles,
.podcasts {
  padding: 7vh 0;
  overflow-x: hidden;

  h3 {
    font-weight: 600;
    font-size: 3rem;
    text-align: center;
    color: #4673b6;
    z-index: 10!important;
    position: relative;
  }

  .yellow-border {
    width: 200px;
    height: 20px;
    background-color: #f5be1d95;
    margin: -40px auto 0;
    transform: translate(-20%,30%);
    position: relative;
    z-index: 2!important;
  }

  .section-description {
    width: 70%;
    margin: 5vh auto;
    font-size: 0.95rem;
    // font-weight: 400;
    span {
      display: block;
      margin-bottom: 20px;
    }
  }

  .podcast-card {
    border: none;
    cursor: pointer;
    margin-bottom: 30px;

    &:hover {
      img {
        // border: 1px solid #3c4043!important;
        transform: scale(1.02);
      }
    }

    .image-holder {
      margin-bottom: 20px;

      img {
        width: 100%;
        height: auto;
        border: 1px solid #e1e1e1;
        transition: all 0.2s;
      }
    }

    h4 {
      font-size: 0.9rem;
      // font-weight: 600;
      color: #3c4043;
      text-align: left;
    }

    .time {
      font-size: 0.8rem;
      color: #80868b;
      display: block;
      font-weight: 300;

      i {
        font-size: 0.2rem;
        position: relative;
        top: -2px;
        margin: 0 5px;
      }
    }
  }

  .btn-more-podcasts {
    background-color: #f5be1d;
    color: #3c4043;
    padding: 10px 40px;
    margin: 3vh auto;
    font-weight: 600;
    font-size: 1rem;
    letter-spacing: 1px;
    border-radius: 0;
    // min-width: 200px;
    &:hover {
      i {
        position: relative;
        left: 15px;
      }
    }

    i {
      position: relative;
      left: 10px;
      transition: all 0.2s;
    }
  }
}
// ***************************
// ARTICLES GENERAL STYLING
// ***************************

.articles {
  text-align: center;
  background-color: #fff;
  padding: 0!important !important;

  .articles-blurred-bg {
    backdrop-filter: blur(20px);
    padding-top: 10vh;
    padding-bottom: 7vh;
  }

  h3 {
    z-index: 10!important;
    position: relative;
  }

  .yellow-border {
    width: 200px;
    height: 20px;
    background-color: #f5be1d80;
    margin: -40px auto 0;
    transform: translate(-20%,30%);
    position: relative;
    z-index: 0!important;
  }

  .illustration-holder {
    img {
      transform: scaleX(-1);
      width: 80%;
      filter: drop-shadow(0 20px 5px #0002);
    }
  }

  .image-holder {
    margin-bottom: 20px;

    img {
      height: 255px!important;
      object-fit: cover;
    }
  }
}
// *******************************
// DROP-IN TEXT ANIMATION
// *******************************

.drop-in {
  animation: drop-in 1s ease 200ms backwards;
}

.drop-in-2 {
  animation: drop-in 1200ms ease 500ms backwards;
}

.drop-in-3 {
  animation: drop-in 1500ms ease 700ms backwards;
}
@keyframes drop-in {
  from {
    opacity: 0;
    transform: translateY(70px);
  }

  to {
    opacity: 1;
    transform: translate(0px);
  }
}

@media (max-width: 1000px) {
  .podcasts {
    padding: 5vh 0 !important;
  }

  .section-description {
    min-width: 90%;
  }
}
@media (max-width: 500px) {
  .section-description {
    color: #5f6063;
    margin-bottom: 30px;
    text-align: center;
    font-size: 0.85rem!important;
    line-height: 1.4rem;
    min-width: 100%;
  }

  .articles,
  .podcasts {
    .col-lg-3,
    .col-md-4 {
      &:last-child {
        .podcast-card {
          border-bottom: none!important;
        }
      }
    }

    .podcast-card {
      border: none;
      cursor: pointer;
      // margin-bottom: 30px;
      display: flex;
      flex-direction: row;
      // border-bottom: 1px solid #e1e1e1!important;
      // border-radius: 0!important;
      // // align-items: center;
      // //
      background-color: #fff;
      box-shadow: 0 0.7961918735236395px 2.3885756205709185px -0.625px #4673b640, 0 2.414506143104518px 7.2435184293135535px -1.25px #0000000d, 0 6.382653521484461px 19.147960564453385px -1.875px #0000000d, 0 20px 60px -2.5px #0000000d;
      // box-shadow: 0 20px 30px 0 #0001;
      border-radius: 12px;
      // align-items: center!important;
      padding: 16px;
      margin-bottom: 10px;

      &:hover {
        img {
          transform: scale(1)!important;
        }
      }

      .image-holder {
        margin-right: 10px!important;
        margin-bottom: 0;
        display: inline-block;

        img {
          width: 70px!important;
          height: 70px!important;
          border-radius: 6px;
          object-fit: cover;
        }
      }

      h4 {
        font-size: 1rem;
        font-weight: 500;
        color: #3c4043;
        text-align: left;
      }
    }
  }
}

